# agilex3-ed-camera

./: .gitmodules  README.md
agx3c_devkit/: README.md
agx3c_devkit/custom_subsystems/dp_tx_lite_subsystem/: dp_tx_create.tcl  dp_tx_subsystem.qsf.terp  dp_tx_subsystem.sdc.terp
agx3c_devkit/custom_subsystems/dp_tx_lite_subsystem/non_qpds_ip/dp_tx_phy/: dp_clk_ctrl.ip  dp_gts_rss.ip  dp_gts_tx.ip
agx3c_devkit/custom_subsystems/isp_lite_4k_in_subsystem/: isp_4k_in_create.tcl
agx3c_devkit/custom_subsystems/isp_lite_4k_out_subsystem/: isp_4k_out_create.tcl
agx3c_devkit/custom_subsystems/isp_lite_4k_subsystem/: isp_4k_create.tcl
agx3c_devkit/custom_subsystems/mipi_lite_4k_in_subsystem/rpi_imx477/: mipi_in_rpi_imx477.sdc  mipi_in_rpi_imx477_Agx3Kit.qsf.terp  mipi_in_rpi_imx477_create.tcl
agx3c_devkit/custom_subsystems/software_dp_tx_lite/: CMakeLists.txt  settings.bsp
agx3c_devkit/custom_subsystems/software_dp_tx_lite/btc_dptx_syslib/: btc_cpu.h  btc_dp_dpcd.h  btc_dp_txregs.h  btc_dp_types.h  btc_dptx_syslib.h  btc_globals.h
agx3c_devkit/custom_subsystems/software_dp_tx_lite/btc_dptx_syslib/release/btc_dptx_syslib/: CMakeLists.txt
agx3c_devkit/custom_subsystems/software_dp_tx_lite/btc_dptxll_syslib/: btc_dp_mst.h  btc_dptxll_globals.h  btc_dptxll_syslib.h
agx3c_devkit/custom_subsystems/software_dp_tx_lite/btc_dptxll_syslib/release/btc_dptxll_syslib/: CMakeLists.txt
agx3c_devkit/custom_subsystems/software_dp_tx_lite/dp_tx_app_src/: aux_decoder.c  aux_decoder.h  board.c  board.h  config.h  debug.c  debug.h  dptx_app_defs.h  dptx_formats.c  dptx_formats.h  imx477_regs.h  intel_axi2cv.c  intel_axi2cv.h  intel_axi2cv_regs.h  intel_fpga_i2c.c  intel_fpga_i2c.h  intel_vab_core.c  intel_vab_core.h  intel_vab_core_io.h  intel_vab_core_regs.h  main.c  sensor_imx477.c  sensor_imx477.h  tx_utils.c  tx_utils.h
agx3c_devkit/designs/: AGX_3C_FPGA_Devkit_ISP_Lite.xml  AGX_3C_SoC_Devkit_ISP_Lite.xml  design.sdc
agx3c_devkit/non_qpds_ip/: intel_vvp_icon.ipx  intel_vvp_remosaic.ipx
agx3c_devkit/non_qpds_ip/intel_vvp_icon/: intel_vvp_icon_algo_comp_hw.tcl  intel_vvp_icon_hw.tcl  intel_vvp_icon_scheduler_hw.tcl
agx3c_devkit/non_qpds_ip/intel_vvp_icon/common_tcl/: intel_vvp_files.tcl  intel_vvp_generic_interfaces.tcl  intel_vvp_helper.tcl  intel_vvp_interfaces.tcl  intel_vvp_parameters.tcl  intel_vvp_protocols.tcl
agx3c_devkit/non_qpds_ip/intel_vvp_icon/src_hdl/: intel_vvp_icon_algo_comp.sv  intel_vvp_icon_altera_1_pip.mif  intel_vvp_icon_altera_2_pip.mif  intel_vvp_icon_altera_4_pip.mif  intel_vvp_icon_altera_8_pip.mif  intel_vvp_icon_axi_master.sv  intel_vvp_icon_axi_pipeline_stage.sv  intel_vvp_icon_axi_zero_pad.sv  intel_vvp_icon_pkg.sv  intel_vvp_icon_scheduler.sv
agx3c_devkit/non_qpds_ip/intel_vvp_remosaic/: intel_vvp_remosaic.sdc  intel_vvp_remosaic_hw.tcl
agx3c_devkit/non_qpds_ip/intel_vvp_remosaic/src_hdl/: intel_vvp_remosaic_core.sv  intel_vvp_remosaic_cpu.sv  intel_vvp_remosaic_gen.sv
agx3c_devkit/pre_compiled_sof/: golden_agx3c_fpga_devkit_isp_lite_top.sof  golden_agx3c_soc_devkit_isp_lite_top.sof
